--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Sync With Hugging Face Hub
 description: An action to sync files on GitHub with a repo on the Hugging Face Hub (https://hf.co)
-author: nateraw
+author: alozowski
 branding:
   icon: upload-cloud
   color: yellow
@@ -30,11 +30,10 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout Action GitHub Repo
-      uses: actions/checkout@v4
-      with:
-        repository: 'nateraw/spaces-action'
-        path: cloned_hf_action_repo
+    - name: Prepare action sources
+      shell: bash
+      run: |
+        cp -r "$GITHUB_ACTION_PATH" cloned_hf_action_repo
 
     - name: Checkout Source GitHub Repo to Push
       uses: actions/checkout@v4
@@ -49,8 +48,7 @@ runs:
       shell: bash
       run: |
         cd cloned_hf_action_repo
-        git pull origin main
-        uv pip install -r requirements.txt
+        uv pip install --system -r requirements.txt
         cd ..
         python cloned_hf_action_repo/sync_with_spaces.py \
           --repo_id "${{ inputs.huggingface_repo_id }}" \
